# Turbo-Super-Novel

./: .env.example  .gitignore  .gitmodules  .ruff.toml  AGENTS.md  CODEX_TASKS.md  README.md  pnpm-lock.yaml
apps/api/: README.md  celery_app.py  env.example  main.py  pyproject.toml  s3.py
apps/api/routes/: __init__.py  capabilities.py  imagegen.py  llm.py  novel.py  tts.py  videogen.py
apps/api/schemas/: __init__.py  common.py
apps/api/tests/: test_api.py  test_imagegen.py  test_speaker_profiles.py  test_tts.py  test_tts_api.py  test_videogen.py
apps/worker/: README.md  celery_app.py  env.example  main.py  model_manager.py  pyproject.toml  s3_utils.py  tasks.py  tts_tasks.py
apps/worker/capabilities/: __init__.py  base.py  tts.py  videogen.py
apps/worker/tests/: test_celery_routing.py  test_model_manager.py  test_tts_tasks.py  test_worker.py
assets/: README.md
docs/: README.md  architecture.md  df11_intro.md  frontend_i2v_spec.md  quickstart.md  turbodiffusion_i2v_runbook.md  worker_deployment.md
infra/: README.md  docker-compose.dev.yml
libs/ai/dfloat11/: README.md  pyproject.toml
libs/ai/dfloat11/src/dfloat11/: __init__.py  dfloat11.py  dfloat11_utils.py
libs/ai/videogen/: README.md  pyproject.toml
libs/ai/videogen/src/SLA/: __init__.py
libs/ai/videogen/src/imaginaire/: __init__.py
libs/ai/videogen/src/rcm/: __init__.py
libs/ai/videogen/src/videogen/: __init__.py  df11_umt5_encoder.py  hf.py  inference.py  paths.py  umt5_bf16_encoder.py
libs/ai/videogen/src/videogen/_vendor/: __init__.py
libs/ai/videogen/src/videogen/_vendor/SLA/: __init__.py  core.py  kernel.py  utils.py
libs/ai/videogen/src/videogen/_vendor/imaginaire/: config.py  model.py  trainer.py
libs/ai/videogen/src/videogen/_vendor/imaginaire/callbacks/: every_n.py  low_precision.py
libs/ai/videogen/src/videogen/_vendor/imaginaire/lazy_config/: __init__.py  lazy.py
libs/ai/videogen/src/videogen/_vendor/imaginaire/utils/: callback.py  checkpointer.py  config_helper.py  device.py  distributed.py  ema.py  fused_adam.py  graph.py  io.py  log.py  misc.py  parallelism.py  profiling.py  validator.py  wandb_util.py
libs/ai/videogen/src/videogen/_vendor/imaginaire/utils/easy_io/: easy_io.py  file_client.py
libs/ai/videogen/src/videogen/_vendor/imaginaire/utils/easy_io/backends/: __init__.py  local_backend.py
libs/ai/videogen/src/videogen/_vendor/imaginaire/utils/easy_io/handlers/: __init__.py  imageio_video_handler.py  jsonl_handler.py  pil_handler.py  registry_utils.py
libs/ai/videogen/src/videogen/_vendor/rcm/: conditioner.py
libs/ai/videogen/src/videogen/_vendor/rcm/callbacks/: compile_tokenizer.py  dataloading_monitor.py  device_monitor.py  every_n_draw_distill.py  every_n_draw_sla.py  grad_clip.py  heart_beat.py  iter_speed.py  wandb_log.py
libs/ai/videogen/src/videogen/_vendor/rcm/checkpointers/: dcp.py  dcp_distill.py
libs/ai/videogen/src/videogen/_vendor/rcm/configs/: registry_distill.py
libs/ai/videogen/src/videogen/_vendor/rcm/configs/defaults/: callbacks.py  checkpoint.py  ckpt_type.py  conditioner.py  dataloader.py  model.py  net.py  optimizer.py  scheduler.py  tokenizer.py  trainer.py
libs/ai/videogen/src/videogen/_vendor/rcm/configs/experiments/rcm/: wan2pt1_t2v.py
libs/ai/videogen/src/videogen/_vendor/rcm/configs/experiments/sla/: wan2pt1_t2v.py
libs/ai/videogen/src/videogen/_vendor/rcm/datasets/: build_synthetic_dataset.py  merge_tar_shards.py  utils.py  visualize_tar.py  webdataset.py
libs/ai/videogen/src/videogen/_vendor/rcm/modules/: denoiser_scaling.py
libs/ai/videogen/src/videogen/_vendor/rcm/networks/: wan2pt1.py  wan2pt1_jvp.py  wan2pt1_jvp_test.py  wan2pt2.py
libs/ai/videogen/src/videogen/_vendor/rcm/samplers/: euler.py  unipc.py
libs/ai/videogen/src/videogen/_vendor/rcm/tokenizers/: wan2pt1.py
libs/ai/videogen/src/videogen/_vendor/rcm/trainers/: trainer_distillation.py
libs/ai/videogen/src/videogen/_vendor/rcm/utils/: a2a_cp.py  attention.py  checkpointer.py  context_parallel.py  dtensor_helper.py  flash_attention_jvp_triton.py  fsdp_helper.py  fused_adam_dtensor.py  jvp_helper.py  lognormal.py  lr_scheduler.py  misc.py  model_utils.py  selective_activation_checkpoint.py  torch_future.py  umt5.py
libs/business/novel/: README.md  pyproject.toml
libs/business/novel/src/novel/: __init__.py  composer.py  models.py  parser.py  pipeline.py
libs/foundation/capabilities/: pyproject.toml
libs/foundation/capabilities/src/capabilities/: __init__.py  config.py  router.py
libs/foundation/capabilities/src/capabilities/providers/: __init__.py  base.py  llm.py  local.py  remote.py
libs/foundation/capabilities/tests/: test_config.py  test_router.py
libs/foundation/db/: README.md  pyproject.toml
libs/foundation/db/src/db/: __init__.py  db.py  models.py
libs/imagegencore/: README.md  pyproject.toml
libs/imagegencore/src/libs/imagegencore/: __init__.py  base.py  service.py
libs/imagegencore/src/libs/imagegencore/providers/: sd_webui.py
libs/novelcore/: README.md  pyproject.toml
libs/novelcore/src/libs/novelcore/: __init__.py  composer.py  models.py  parser.py  pipeline.py
libs/pycore/: README.md  pyproject.toml
libs/pycore/src/libs/pycore/: __init__.py  paths.py
libs/ttscore/: README.md  pyproject.toml
libs/ttscore/src/libs/ttscore/: __init__.py  base.py  service.py
libs/ttscore/src/libs/ttscore/providers/: edge_tts.py
libs/turbo_diffusion_ops/: pyproject.toml  setup.py
libs/turbo_diffusion_ops/csrc/gemm/: utils.hpp
libs/turbo_diffusion_ops/csrc/quant/: quant.cu
libs/turbo_diffusion_ops/turbo_diffusion_ops.egg-info/: top_level.txt
libs/turbodiffusion_core/: README.md  pyproject.toml
libs/turbodiffusion_core/src/SLA/: core.py
libs/turbodiffusion_core/src/dfloat11/: decode.cu  decode.ptx  dfloat11.py
libs/turbodiffusion_core/src/libs/turbodiffusion/: __init__.py  df11_umt5_encoder.py  hf.py  inference.py  paths.py  registry.py  umt5_bf16_encoder.py
libs/turbodiffusion_core/src/rcm/utils/: umt5.py
scripts/: README.md  build_turbodiffusion_ops.sh  cache_umt5_tokenizer.py  concat_videos.py  (+14 more)
(+141 files in other folders)
