[project]
name = "tsn-api"
version = "0.1.0"
description = "Turbo-Super-Novel API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "boto3>=1.34",
  "celery>=5.4",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "py_core",
  "td_core",
  "db_core",
]

[tool.uv.sources]
py_core = { path = "../../libs/pycore", editable = true }
td_core = { path = "../../libs/turbodiffusion_core", editable = true }
db_core = { path = "../../libs/dbcore", editable = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "celery_app.py", "s3.py"]
