[project]
name = "tsn-api"
version = "0.2.0"
description = "Turbo-Super-Novel API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "boto3>=1.34",
  "celery>=5.4",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.0",
  "tsn-core",
  "tsn-videogen",
  "tsn-db",
  "tsn-novel",
  "tsn-tts",
  "tsn-imagegen",
]

[tool.uv.sources]
tsn-core = { path = "../../libs/foundation/core", editable = true }
tsn-db = { path = "../../libs/foundation/db", editable = true }
tsn-tts = { path = "../../libs/ai/tts", editable = true }
tsn-imagegen = { path = "../../libs/ai/imagegen", editable = true }
tsn-videogen = { path = "../../libs/ai/videogen", editable = true }
tsn-novel = { path = "../../libs/business/novel", editable = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "httpx>=0.27",
  "ruff>=0.6",
]
tools = [
  "modelscope>=1.16.0",
  "huggingface_hub>=0.24.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "celery_app.py", "s3.py"]
