[project]
name = "tsn-worker"
version = "0.1.0"
description = "Turbo-Super-Novel Worker"
requires-python = ">=3.12,<3.14"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "boto3>=1.34",
  "py_core",
  "td_core",
  "db_core",
  "torch>=2.8",
  "torchvision>=0.23",
  "triton",
  "einops",
  "tqdm",
  "pillow",
  "numpy",
  "loguru",
  "imageio[ffmpeg]",
  "pandas",
  "transformers",
  "ftfy",
  "regex",
  "PyYAML",
  "omegaconf",
  "attrs",
  "fvcore",
  "nvidia-ml-py",
  # DF11 runtime (used by Wan2.2 text encoder path when TD_TEXT_ENCODER_FORMAT=df11).
  "dfloat11[cuda12]",
]

[tool.uv.sources]
py_core = { path = "../../libs/pycore", editable = true }
td_core = { path = "../../libs/turbodiffusion_core", editable = true }
db_core = { path = "../../libs/dbcore", editable = true }
dfloat11 = { path = "../../libs/dfloat11", editable = true }
turbo_diffusion_ops = { path = "../../libs/turbo_diffusion_ops", editable = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
cuda = [
  "torch<2.9",
  "torchvision<0.24",
  "flash-attn",
  "turbo_diffusion_ops",
]
sagesla = [
  "spas-sage-attn @ git+https://github.com/thu-ml/SpargeAttn.git",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "celery_app.py", "tasks.py"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch<2.9", "numpy"]
spas-sage-attn = ["torch<2.9", "packaging", "ninja"]
