[project]
name = "tsn-worker"
version = "0.1.0"
description = "Turbo-Super-Novel Worker"
requires-python = ">=3.12,<3.14"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "boto3>=1.34",
  "tsn-core",
  "tsn-videogen",
  "tsn-db",
  "tsn-tts",
  "torch>=2.8",
  "torchvision>=0.23",
  "triton",
  "einops",
  "tqdm",
  "pillow",
  "numpy",
  "loguru",
  "imageio[ffmpeg]",
  "pandas",
  "transformers",
  "torchaudio",
  "onnxruntime-gpu>=1.19.0",
  "hyperpyyaml>=1.2.2",
  "sentencepiece>=0.1.99",
  "soundfile>=0.12.1",
  "scipy>=1.15.0",
  "librosa>=0.10.0",
  "tiktoken>=0.6.0",
  "WeTextProcessing>=1.0.3",
  "contractions>=0.1.73",
  "inflect>=7.3.1",
  "emoji>=2.14.1",
  "pronouncing>=0.2.0",
  "jieba>=0.42.1",
  "pypinyin>=0.44.0",
  "zhconv>=1.4.3",
  "zhon>=2.1.1",
  "peft>=0.7.0",
  "x-transformers>=1.42.0",
  "ftfy",
  "regex",
  "PyYAML",
  "omegaconf",
  "attrs",
  "fvcore",
  "nvidia-ml-py",
  # DF11 runtime (used by Wan2.2 text encoder path when TD_TEXT_ENCODER_FORMAT=df11).
  "dfloat11[cuda12]",
]

[tool.uv.sources]
tsn-core = { path = "../../libs/foundation/core", editable = true }
tsn-videogen = { path = "../../libs/ai/videogen", editable = true }
tsn-db = { path = "../../libs/foundation/db", editable = true }
tsn-tts = { path = "../../libs/ai/tts", editable = true }
dfloat11 = { path = "../../libs/ai/dfloat11", editable = true }
tsn-ops = { path = "../../libs/ai/ops", editable = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
cuda = [
  "torch<2.9",
  "torchvision<0.24",
  "flash-attn",
  "tsn-ops",
]
sagesla = [
  "spas-sage-attn @ git+https://github.com/thu-ml/SpargeAttn.git",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "celery_app.py", "tasks.py"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch<2.9", "numpy"]
spas-sage-attn = ["torch<2.9", "packaging", "ninja"]
