[project]
name = "imagegen_core"
version = "0.1.0"
description = "Image generation abstraction layer with pluggable providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libs"]
