[project]
name = "novelcore"
version = "0.1.0"
description = "Novel video project management and pipeline orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]
pycore = { path = "../../libs/pycore", editable = true }
dbcore = { path = "../../libs/dbcore", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libs"]
