[project]
name = "py_core"
version = "0.1.0"
description = "Shared python core utilities for Turbo-Super-Novel"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libs"]

