[project]
name = "tts_core"
version = "0.1.0"
description = "TTS abstraction layer with pluggable providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
edge = ["edge-tts>=6.1.0"]
azure = ["azure-cognitiveservices-speech>=1.30.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libs"]
