[project]
name = "td_core"
version = "0.1.0"
description = "Shared TurboDiffusion integration utilities for Turbo-Super-Novel"
requires-python = ">=3.12,<3.14"
dependencies = [
  "py_core",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libs"]
