[project]
name = "dfloat11"
version = "0.5.0"
description = "Local DFloat11 runtime (extracted from td_core)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "accelerate",
  "dahuffman==0.4.2",
  "huggingface_hub",
  "numpy",
  "safetensors",
  "torch",
  "tqdm",
]

[project.optional-dependencies]
cuda12 = [
  "cupy-cuda12x",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfloat11"]
include = [
  "src/dfloat11/decode.ptx",
  "src/dfloat11/decode.cu",
]
