[project]
name = "tsn-videogen"
version = "0.1.0"
description = "TurboDiffusion video generation integration"
requires-python = ">=3.12,<3.14"
dependencies = [
  "tsn-core",
]

[tool.uv.sources]
tsn-core = { path = "../../foundation/core", editable = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videogen", "src/rcm", "src/imaginaire", "src/SLA"]
