[project]
name = "tsn-db"
version = "0.1.0"
description = "Shared database utilities for Turbo-Super-Novel"
requires-python = ">=3.12,<3.14"
dependencies = [
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "tsn-core",
]

[tool.uv.sources]
tsn-core = { path = "../core", editable = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
